# kedro-dagster-example

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dagster_cloud.yaml  dg.toml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  dagster-cloud-deploy.yml  publish-kedro-viz.yml
conf/: logging.yml
conf/base/: catalog.yml
conf/dev/: catalog.yml  credentials.yml  dagster.yml  mlflow.yml  parameters_data_science.yml  parameters_model_tuning.yml
conf/local/: catalog.yml  dagster.yml  mlflow.yml  parameters_data_science.yml  parameters_model_tuning.yml
conf/prod/: catalog.yml  dagster.yml  mlflow.yml  parameters_data_science.yml
conf/staging/: catalog.yml  dagster.yml  mlflow.yml  parameters_data_science.yml  parameters_model_tuning.yml
data/01_raw/companies/: companies_1.csv  companies_2.csv  companies_3.csv
data/01_raw/reviews/: reviews_1.csv  reviews_2.csv  reviews_3.csv
data/01_raw/shuttles/: shuttles_1.csv  shuttles_2.csv  shuttles_3.csv
docker/: .dockerignore  Dockerfile  pipelines-dev.docker-compose.yml
notebooks/: kedro_inspect_catalog.ipynb
src/kedro_dagster_example/: definitions.py  pipeline_registry.py  settings.py  study_dataset.py
src/kedro_dagster_example/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_dagster_example/pipelines/data_science/: nodes.py  pipeline.py
src/kedro_dagster_example/pipelines/model_tuning/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_dagster_jobs_run.py  test_kedro_pipeline_run.py  test_kedro_pipelines_run.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/model_tuning/: test_pipeline.py
